<resources>
    <string name="app_name">ECHO</string>
    <string name="logo">logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="all_songs">All Songs</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="playnext">playNext</string>
    <string name="playpause">playPause</string>
    <string name="there_are_no_songs_on_your_device_at_the_moment">There are no songs on your device at the moment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playprev">playPrev</string>
    <string name="your_favourites_list_is_empty">Your Favourites list is Empty</string>
    <string name="shake_device_to_change_song">Shake Device to Change Song</string>
    <string name="exclude_files_less_than_10_sec">Exclude files less than 20 sec</string>
    <string name="song_info">Song Info</string>
    <string name="now_playing">Now Playing</string>
</resources>
